--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -64,7 +64,7 @@
                     
                     <li class="nav-item">
                         <a class="nav-link text-warning fw-semibold" href="{% url 'upload_timetable' %}">
-                            <i class="bi bi-calendar-plus me-1"></i>Timetable
+                            Timetable
                         </a>
                     </li>
                     {% endif %}
